# EnclaveSplit

./: .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt
docker/: Dockerfile
enclave/: CMakeLists.txt  enc.conf  enclave.c  enclave.edl  host.c
eval/: bench_latency.py  benchmark.py  inversion_attack.py
host/: inference_host.py  run_split_inference.py  secure_stub.py
models/: partition_config.json
paper/: extracted_facts.md
partition/: splitter.py
partition/configs/: deeplabv3_mnetv3.yaml  mobilenetv2.yaml  resnet18.yaml  tinybert.yaml  yolov8n.yaml
results/: MEASUREMENT_PROVENANCE.md  README.md  actual_inversion_measurements.csv  actual_inversion_predictions.csv  actual_latency_decomposition.csv  actual_latency_measurements.csv  actual_latency_predictions.csv  generated_actual_latency_measurements.csv  generated_actual_latency_predictions.csv  paper_reported_latency.csv
